--- a/css/theme.css
+++ b/css/theme.css
@@ -26,7 +26,7 @@ a:hover { text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { margin: 5px 0px 15px 0px; clear: both; font-weight: lighter; }
 h1 { font-size: 36px; }
 h2 { font-size: 30px; }
-h3 { font-size: 24px; }
+h3 { font-size: 24px; color: #ff9000}
 h4 { font-size: 20px; }
 h5 { font-size: 18px; }
 h6 { font-size: 14px; }
