--- a/css/media.css
+++ b/css/media.css
@@ -312,7 +312,7 @@ http://www.templatemo.com/tm-473-november
 	.Banner_sec .Center {width: 100%; padding: 0px 3%; }
 	.Banner_sec .bannerside { top: 90px; }
 	.Banner_sec .leftside { padding: 0px 0px 10px 0px; width: 100%; float: none; }
-	.Banner_sec .leftside h3 { font-size: 30px; }
+	.Banner_sec .leftside h3 { font-size: 30px; background: #5C6D6A;}
 	.Banner_sec .leftside p { font-size: 14px; line-height: 18px; padding: 10px 0px; }
 	.Banner_sec .leftside a { font-size: 13px; }
 	.Banner_sec .rightside { width: 98%;}
