--- a/css.css
+++ b/css.css
@@ -1,6 +1,12 @@
 @font-face {
-	font-family: 'Rubik Doodle Shadow';
-	src: url('RubikDoodleShadow-Regular.woff2') format('woff2') url('RubikDoodleShadow-Regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-}
+    font-family: 'Rubik Doodle Shadow';
+    src: url('RubikDoodleShadow-Regular.woff2') format('woff2'),
+         url('RubikDoodleShadow-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  /* Пример применения шрифта ко всему документу */
+  body, h1, h2, h3, h4, p, button {
+    font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
+  }
