--- a/css.css
+++ b/css.css
@@ -76,6 +76,7 @@
     margin: 2rem 0 2rem 0;
     text-align: center;
     user-select: none;
+    /* Без обводки! */
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -85,8 +86,39 @@
     margin-bottom: 1rem;
     line-height: 1.1;
     text-transform: uppercase;
+    /* Обводка для всех заголовков */
+    -webkit-text-stroke: 2px var(--background);
+    text-shadow:
+      2px 2px 0 var(--background),
+      -2px 2px 0 var(--background),
+      2px -2px 0 var(--background),
+      -2px -2px 0 var(--background),
+      0 2px 0 var(--background),
+      2px 0 0 var(--background),
+      0 -2px 0 var(--background),
+      -2px 0 0 var(--background);
+    /* Для плавного перехода цвета обводки при смене темы */
+    transition: color 0.4s, -webkit-text-stroke-color 0.4s;
   }
-  h1 { font-size: 5.4rem; }  /* x2 */
+  body[data-theme="dark"] h1,
+  body[data-theme="dark"] h2,
+  body[data-theme="dark"] h3,
+  body[data-theme="dark"] h4,
+  body[data-theme="dark"] h5,
+  body[data-theme="dark"] h6 {
+    -webkit-text-stroke: 2px #080808;
+    text-shadow:
+      2px 2px 0 #080808,
+      -2px 2px 0 #080808,
+      2px -2px 0 #080808,
+      -2px -2px 0 #080808,
+      0 2px 0 #080808,
+      2px 0 0 #080808,
+      0 -2px 0 #080808,
+      -2px 0 0 #080808;
+  }
+  
+  h1 { font-size: 5.4rem; }
   h2 { font-size: 4.2rem; }
   h3 { font-size: 3.0rem; }
   h4 { font-size: 2.4rem; }
