--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -14,7 +14,7 @@
 }
 :root {
   --dark: #080808;
-  --light: #663399;
+  --light: #FFFFFF;
   --header-font: 'Rubik Doodle Shadow', 'Roboto', Arial, sans-serif;
   --main-font: 'Rubik', Arial, sans-serif;
   --body-font: 'Roboto', Arial, sans-serif;
