--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -17,6 +17,7 @@
 :root {
   --dark: #080808;
   --light: #fcf9f6;
+  --accent: #ff5e3a;
   --header-font: 'Rubik Doodle Shadow', 'Roboto', Arial, sans-serif;
   --main-font: 'Rubik', Arial, sans-serif;
   --body-font: 'Roboto', Arial, sans-serif;
