--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -24,7 +24,7 @@
   --accentd: #0080FF;
   --header-font: 'Rubik Doodle Shadow', 'Roboto', Arial, sans-serif;
   --main-font: 'Rubik', Arial, sans-serif;
-  --body-font: 'Roboto', Arial, sans-serif;
+  --body-font: 'Rubik', Arial, sans-serif;
   --background: var(--light);
   --text: var(--dark);
   --btn-bg: var(--dark);
