--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -22,8 +22,8 @@
   --accents: #96bf48;
   --accentc: #F48120;
   --accentd: #0080FF;
-  --header-font: 'Rubik Doodle Shadow', 'Roboto', Arial, sans-serif;
-  --main-font: 'Rubik', Arial, sans-serif;
+  --header-font: 'Rubik Doodle Shadow', sans-serif;
+  --main-font: 'Rubik', sans-serif;
   --body-font: 'IBM Plex Sans', sans-serif;
   --background: var(--light);
   --text: var(--dark);
